manifest/crud-laravel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-laravel
  labels:
    keel.sh/policy: all  
    keel.sh/trigger: poll  
    keel.sh/approvals: "1"
spec:
  selector:
    matchLabels:
      app: crud-laravel
  template:
    metadata:
      labels:
        app: crud-laravel
    spec:
      containers:
        - name: demo
          image: ravennaras/crud8laravel:0.1.6
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: 1.5Gi
            requests:
              cpu: "0.2"
              memory: 150Mi
---
apiVersion: v1
kind: Service
metadata:
  name: crud-laravel
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: crud-laravel
  type: ClusterIP
