manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: crud.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: crud-laravel
              port:
                number: 80
    - host: db.crud.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mysql
              port:
                number: 3306
