manifest/mysql-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: db.crud.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql
            port:
              number: 3306
